clean version up

--- a/manuscript/resub-waiting-distances.tex
+++ b/manuscript/resub-waiting-distances.tex
@@ -3087,7 +3087,8 @@ was approximately 12 times greater than under the MS-SMC model,
 reflecting that there is generally much more information in the coalescent 
 times in a genealogy than in the interval length that it spans.
 Similarly, the $\Delta$log-likelihood across the examined parameter space 
-was much larger under the MSC model.
+was approximately three orders of magnitude greater when analyzing 
+genealogies under the MSC compared to waiting distances under the MS-SMC.
 % 
 
 When evaluating model parameters based on multiple criteria, inference can 
@@ -5044,7 +5045,7 @@ the Eaton Lab for valuable feedback.
 		exhibit elevated error at low $N_e$ values in highly structured models, when
 		the probability of a topology-change event is very low.
 		(c) The error between analytical predictions and simulated data was greatest 
-		when the data were simulated under the full coalescent with recombination. The
+		when the data were simulated under the full coalescent with recombination. 
 		(d) When more genomes are sampled per lineage the magnitude of error is greatly
 		reduced.
 		}
