fix path given file reorg

--- a/final-notebooks/nb-x2-validations-revisions.ipynb
+++ b/final-notebooks/nb-x2-validations-revisions.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "# %%bash\n",
-    "# python ../batch-scripts/validate-2.py "
+    "# python ../scripts/validate-2.py "
    ]
   },
   {
