updated gh links; add data avail; add USA

--- a/manuscript/resub-waiting-distances-clean.tex
+++ b/manuscript/resub-waiting-distances-clean.tex
@@ -82,7 +82,7 @@
 	Patrick F. McKenzie$^{1}$ and Deren A. R. Eaton$^{1, *}$\\[0.25cm]
 
 	\emph{
-	$^{1}$ Department of Ecology, Evolution, and Environmental Biology, Columbia University, New York, NY 10027\\[0.5cm]
+	$^{1}$ Department of Ecology, Evolution, and Environmental Biology, Columbia University, New York, NY 10027, USA\\[0.5cm]
 	$^{*}$ Contact: de2356@columbia.edu\\[0.5cm]
 	}
 \end{center}
@@ -867,7 +867,7 @@ expectations from coalescent simulations implemented in
 Source code is available at \url{https://github.com/eaton-lab/ipcoal}.
 Jupyter notebooks demonstrating the MS-SMC calculations and with 
 reproducible code used for validations in this study are available
-at \url{https://github.com/eaton-lab/waiting-distances}.
+at \url{https://github.com/eaton-lab/waiting-distance-code}.
 
 
 \begin{figure}
@@ -1887,6 +1887,16 @@ DGE 16-44869 awarded to P.F.M.). Thanks to Yun Deng for discussion
 on waiting distance methods, to Jerome Kelleher for and two anonymous 
 reviewers for suggestions that improved the manuscript, and to members of 
 the Eaton Lab for valuable feedback.
+
+\subsection{Data Availability}
+Code to calculate MS-SMC probabilities and waiting distances is 
+implemented in the Python package \emph{ipcoal} 
+(\url{https://github.com/eaton-lab/ipcoal}). 
+Jupyter notebooks demonstrating the MS-SMC calculations and with 
+reproducible code used for validations in this study are available
+at \url{https://github.com/eaton-lab/waiting-distance-code}. Notebooks
+and code were also archived in DRYAD at
+\url{https://doi.org/10.5061/dryad.jdfn2z3n7}.
 
 
 \bibliographystyle{ecol_let}
