added sharelink url, fixed citation to genealogy embedding table

--- a/manuscript/resub-waiting-distances-clean.tex
+++ b/manuscript/resub-waiting-distances-clean.tex
@@ -8,7 +8,7 @@
 \usepackage[pdftex]{graphicx}
 \usepackage[letterpaper, left=1.0in, right=1.0in, top=1.0in, bottom=1.0in]{geometry}
 \usepackage{ragged2e}
-\usepackage{url}
+\usepackage{xurl}
 \usepackage{setspace}
 \usepackage{lineno}
 \usepackage{multirow}
@@ -1896,7 +1896,8 @@ Jupyter notebooks demonstrating the MS-SMC calculations and with
 reproducible code used for validations in this study are available
 at \url{https://github.com/eaton-lab/waiting-distance-code}. Notebooks
 and code were also archived in DRYAD at
-\url{https://doi.org/10.5061/dryad.jdfn2z3n7}.
+\url{https://doi.org/10.5061/dryad.jdfn2z3n7} (Reviewer Sharelink: 
+\url{http://datadryad.org/stash/share/_4s04af8qeWaVNIzQGs0klGrMEFBhoqlWIxgu66h6WA}).
 
 
 \bibliographystyle{ecol_let}
@@ -2375,7 +2376,7 @@ time intervals can be defined that are delimited
 by events that change the rate of coalescence. 
 We refer to this 
 set of discrete time intervals and their associated properties
-as a genealogy embedding table (e.g., Table~\ref{tab:table-1}). 
+as a genealogy embedding table (e.g., Fig.~\ref{fig:embedding-table}b). 
 In the waiting distance solutions for a single population with constant $N_e$ 
 by \citet{deng_distribution_2021}, this table is delimited only by coalescent 
 events, and the intervals are non-overlapping. 
