--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -837,3 +837,63 @@ year = {2022}
   year={2006},
   publisher={Oxford University Press}
 }
+
+
+
+@misc{deng_robust_2024,
+  title = {Robust and {Accurate} {Bayesian} {Inference} of {Genome}-{Wide} {Genealogies} for {Large} {Samples}},
+  copyright = {© 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
+  url = {https://www.biorxiv.org/content/10.1101/2024.03.16.585351v1},
+  doi = {10.1101/2024.03.16.585351},
+  abstract = {The Ancestral Recombination Graph (ARG), which describes the full genealogical history of a sample of genomes, is a vital tool in population genomics and biomedical research. Recent advancements have increased ARG reconstruction scalability to tens or hundreds of thousands of genomes, but these methods rely on heuristics, which can reduce accuracy, particularly in the presence of model misspecification. Moreover, they reconstruct only a single ARG topology and cannot quantify the considerable uncertainty associated with ARG inferences. To address these challenges, we here introduce SINGER, a novel method that accelerates ARG sampling from the posterior distribution by two orders of magnitude, enabling accurate inference and uncertainty quantification for large samples. Through extensive simulations, we demonstrate SINGER’s enhanced accuracy and robustness to model misspecification compared to existing methods. We illustrate the utility of SINGER by applying it to African populations within the 1000 Genomes Project, identifying signals of local adaptation and archaic introgression, as well as strong support of trans-species polymorphism and balancing selection in HLA regions.},
+  language = {en},
+  urldate = {2025-04-25},
+  publisher = {bioRxiv},
+  author = {Deng, Yun and Nielsen, Rasmus and Song, Yun S.},
+  month = mar,
+  year = {2024},
+  note = {Pages: 2024.03.16.585351
+Section: New Results},
+  file = {Full Text PDF:/home/deren/Zotero/storage/DJHRBX29/Deng et al. - 2024 - Robust and Accurate Bayesian Inference of Genome-Wide Genealogies for Large Samples.pdf:application/pdf},
+}
+
+
+
+@article{nielsen_inference_2025,
+  title = {Inference and applications of ancestral recombination graphs},
+  volume = {26},
+  copyright = {2024 Springer Nature Limited},
+  issn = {1471-0064},
+  url = {https://www.nature.com/articles/s41576-024-00772-4},
+  doi = {10.1038/s41576-024-00772-4},
+  abstract = {Ancestral recombination graphs (ARGs) summarize the complex genealogical relationships between individuals represented in a sample of DNA sequences. Their use is currently revolutionizing the field of population genetics and is leading to the development of powerful new methods to elucidate individual and population genetic processes, including population size history, migration, admixture, recombination, mutation and selection. In this Review, we introduce the readers to the structure of ARGs and discuss how they relate to processes such as recombination and genetic drift. We explore differences and similarities between methods of estimating ARGs and provide concrete illustrative examples of how ARGs can be used to elucidate population-level processes.},
+  language = {en},
+  number = {1},
+  urldate = {2025-04-25},
+  journal = {Nature Reviews Genetics},
+  author = {Nielsen, Rasmus and Vaughn, Andrew H. and Deng, Yun},
+  month = jan,
+  year = {2025},
+  note = {Publisher: Nature Publishing Group},
+  keywords = {Computational biology and bioinformatics, Evolutionary genetics, Genetic variation},
+  pages = {47--58},
+  file = {Full Text PDF:/home/deren/Zotero/storage/A34DRBNB/Nielsen et al. - 2025 - Inference and applications of ancestral recombination graphs.pdf:application/pdf},
+}
+
+
+@article{wong_general_2024,
+  title = {A general and efficient representation of ancestral recombination graphs},
+  volume = {228},
+  issn = {1943-2631},
+  url = {https://doi.org/10.1093/genetics/iyae100},
+  doi = {10.1093/genetics/iyae100},
+  abstract = {As a result of recombination, adjacent nucleotides can have different paths of genetic inheritance and therefore the genealogical trees for a sample of DNA sequences vary along the genome. The structure capturing the details of these intricately interwoven paths of inheritance is referred to as an ancestral recombination graph (ARG). Classical formalisms have focused on mapping coalescence and recombination events to the nodes in an ARG. However, this approach is out of step with some modern developments, which do not represent genetic inheritance in terms of these events or explicitly infer them. We present a simple formalism that defines an ARG in terms of specific genomes and their intervals of genetic inheritance, and show how it generalizes these classical treatments and encompasses the outputs of recent methods. We discuss nuances arising from this more general structure, and argue that it forms an appropriate basis for a software standard in this rapidly growing field.},
+  number = {1},
+  urldate = {2025-04-25},
+  journal = {Genetics},
+  author = {Wong, Yan and Ignatieva, Anastasia and Koskela, Jere and Gorjanc, Gregor and Wohns, Anthony W and Kelleher, Jerome},
+  month = sep,
+  year = {2024},
+  pages = {iyae100},
+  file = {Full Text PDF:/home/deren/Zotero/storage/WGJCW6RW/Wong et al. - 2024 - A general and efficient representation of ancestral recombination graphs.pdf:application/pdf;Snapshot:/home/deren/Zotero/storage/DPRLTHC2/7714980.html:text/html},
+}
