--- a/manuscript/resub2-waiting-distances.tex
+++ b/manuscript/resub2-waiting-distances.tex
@@ -1943,6 +1943,8 @@ reproducible code used for validations in this study are available
 at \url{https://github.com/eaton-lab/waiting-distance-code}. Notebooks
 and code were also archived in DRYAD at
 \url{https://doi.org/10.5061/dryad.jdfn2z3n7}.
+(Reviewer Sharelink: 
+\url{http://datadryad.org/stash/share/_4s04af8qeWaVNIzQGs0klGrMEFBhoqlWIxgu66h6WA}).
 
 
 \bibliographystyle{ecol_let}
@@ -2421,7 +2423,8 @@ time intervals can be defined that are delimited
 by events that change the rate of coalescence. 
 We refer to this 
 set of discrete time intervals and their associated properties
-as a genealogy embedding table (e.g., Table~\ref{tab:table-1}). 
+as a genealogy embedding table (e.g., Fig.~\ref{fig:embedding-table}b).
+% (e.g., Table~\ref{tab:table-1}). 
 In the waiting distance solutions for a single population with constant $N_e$ 
 by \citet{deng_distribution_2021}, this table is delimited only by coalescent 
 events, and the intervals are non-overlapping. 
